tests/trybuild/entities/comma_alone.rs
use brood::entities;

fn main () {
    let entities = entities!(,);
}
